fix: english word wrap

--- a/style/web/components/notification/_index.less
+++ b/style/web/components/notification/_index.less
@@ -66,6 +66,7 @@
     overflow: hidden;
     padding-right: 5px;
     text-overflow: ellipsis;
+    word-break: break-all;
     // 需要排查兼容性
     // 暂时没找到其他方案，先ignore
 
